@@ -14,9 +14,9 @@ my $response = $agent->get( START );
 ok( $response->is_success, 'Got some page' ) or die "Can't even get Google";
 is( $agent->uri, START, 'Got Google' );
 
-$response = $agent->follow_link( text_regex => qr/Business/i );
+$response = $agent->follow_link( text_regex => qr/Advertising.Programs/i );
 ok( $response->is_success, 'Got the page' );
-is( $agent->uri, 'http://www.google.com/services/', "Got the correct page" );
+is( $agent->uri, 'http://www.google.com/ads/', "Got the correct page" );
 
 SKIP: {
     eval "use Test::Memory::Cycle";
