@@ -1,6 +1,10 @@
 Revision history for Perl extension WWW::Mechanize
 
 Next
+        [FIXES]
+        * Fixed test failures because of Google changes.  Thanks to
+          Offer Kaye and others who sent in patches.
+
         [DOCUMENTATION]
         * More samples in the FAQ
 
